# simplefilewatcher

./: CMakeLists.txt
source/: CMakeLists.txt
